--- a/Styles/carusel.css
+++ b/Styles/carusel.css
@@ -14,9 +14,10 @@ img {
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
+  background-color: black;
+  max-width: 900px;
   position: relative;
-  margin: auto;
+  margin: 20px;
 }
 
 /* Next & previous buttons */
@@ -33,7 +34,6 @@ img {
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
-  user-select: none;
 }
 
 /* Position the "next button" to the right */
@@ -80,11 +80,6 @@ img {
   transition: background-color 0.6s ease;
 }
 
-.active,
-.dot:hover {
-  background-color: #717171;
-}
-
 /* Fading animation */
 .fade {
   animation-name: fade;
@@ -109,4 +104,3 @@ img {
     font-size: 11px;
   }
 }
-
