--- a/public/css/usuario/index.css
+++ b/public/css/usuario/index.css
@@ -15,6 +15,7 @@ body {
   flex-direction: column;
   align-items: center;
   background-color: var(--second-color);
+  padding-top: 80px;
 }
 
 .link_Index {
