--- a/tienda/styles.css
+++ b/tienda/styles.css
@@ -1,196 +1,252 @@
+@import url("https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css");
 /* Barra lateral */
+
+:root{
+    --color-boton:#FF8225;
+    --color-boton-texto:#173B45;
+    --color-boton-hover:#B43F3F;
+    --color-boton-hover-texto:#F8EDED;
+}
+
+
 .sidebar {
-    width: 250px;
-    background-color: #002D62;
-    color: #FFF;
-    height: 100vh;
-    padding-top: 0;
-    position: fixed;
-    top: 0;
-    left: 0;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    font-family: Arial, sans-serif;
+  width: 250px;
+  background-color: #002d62;
+  color: #fff;
+  height: 100vh;
+  padding-top: 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: Arial, sans-serif;
 }
 
 .sidebar-title {
-    background-color: #007bff;
-    color: #FFF;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 50px;
-    width: 100%;
+  background-color: #007bff;
+  color: #fff;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 50px;
+  width: 100%;
 }
 
 .sidebar-title h2 {
-    font-size: 20px;
-    margin: 0;
-    font-weight: bold;
+  font-size: 20px;
+  margin: 0;
+  font-weight: bold;
 }
 
 .nav {
-    list-style: none;
-    padding: 0;
-    margin-top: 15px;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+  list-style: none;
+  padding: 0;
+  margin-top: 15px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .nav li {
-    padding: 0;
-    width: 100%;
-    margin-bottom: 8px; /* Añadir margen inferior para separar las opciones */
+  padding: 0;
+  width: 100%;
+  margin-bottom: 8px; /* Añadir margen inferior para separar las opciones */
 }
 
 .nav li a {
-    color: #FFF;
-    text-decoration: none;
-    display: flex;
-    align-items: center;
-    padding: 10px 20px;
-    font-size: 16px;
-    border-radius: 4px;
-    transition: background-color 0.3s;
-    width: calc(100% - 40px); /* Ajuste para mantener el sombreado dentro */
-    margin: 0 auto; /* Centra el enlace en la barra lateral */
-    box-sizing: border-box;
+  color: #fff;
+  text-decoration: none;
+  display: flex;
+  align-items: center;
+  padding: 10px 20px;
+  font-size: 16px;
+  border-radius: 4px;
+  transition: background-color 0.3s;
+  width: calc(100% - 40px); /* Ajuste para mantener el sombreado dentro */
+  margin: 0 auto; /* Centra el enlace en la barra lateral */
+  box-sizing: border-box;
 }
 
 .nav li a i {
-    margin-right: 10px;
+  margin-right: 10px;
 }
 
 /* Estilo para la opción activa del menú */
-.nav li a.active, .nav li a:hover {
-    background-color: #0051A0;
+.nav li a.active,
+.nav li a:hover {
+  background-color: #0051a0;
 }
 
 /* Barra superior */
 header {
-    width: calc(100% - 250px); /* Ajusta el ancho restando la barra lateral */
-    background-color: #007bff; /* Color azul para que coincida con el contenedor de la barra lateral */
-    color: #FFF;
-    padding: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    position: fixed;
-    top: 0;
-    left: 250px; /* Ajusta la posición después de la barra lateral */
-    height: 50px; /* Ajustar la altura */
-    z-index: 1000;
-    font-family: Arial, sans-serif; /* Fuente original */
+  width: calc(100% - 250px); /* Ajusta el ancho restando la barra lateral */
+  background-color: #007bff; /* Color azul para que coincida con el contenedor de la barra lateral */
+  color: #fff;
+  padding: 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: fixed;
+  top: 0;
+  left: 250px; /* Ajusta la posición después de la barra lateral */
+  height: 50px; /* Ajustar la altura */
+  z-index: 1000;
+  font-family: Arial, sans-serif; /* Fuente original */
 }
 
 header h1 {
-    font-size: 18px;
-    margin: 0;
-    padding-left: 20px;
-    font-weight: normal;
-    display: flex;
-    align-items: center;
+  font-size: 18px;
+  margin: 0;
+  padding-left: 20px;
+  font-weight: normal;
+  display: flex;
+  align-items: center;
 }
 
 header h1::before {
-    content: url('URL_DEL_ICONO'); /* URL del ícono a la izquierda */
-    display: inline-block;
-    margin-right: 10px;
+  content: url("URL_DEL_ICONO"); /* URL del ícono a la izquierda */
+  display: inline-block;
+  margin-right: 10px;
 }
 
 header .user-status {
-    background-color: #FFC107;
-    padding: 5px 10px;
-    border-radius: 20px;
-    color: #333;
-    font-size: 14px;
-    margin-right: 20px;
-    display: flex;
-    align-items: center;
-    gap: 5px;
+  background-color: #ffc107;
+  padding: 5px 10px;
+  border-radius: 20px;
+  color: #333;
+  font-size: 14px;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  gap: 5px;
 }
 
 /* Contenido principal */
 .main-content {
-    margin-top: 50px; /* Ajusta el margen superior */
-    margin-left: 250px;
-    padding: 20px;
-    background-color: #f5f5f5;
-    min-height: calc(100vh - 50px);
-    font-family: Arial, sans-serif; /* Fuente original */
+  margin-top: 50px; /* Ajusta el margen superior */
+  margin-left: 250px;
+  padding: 20px;
+  background-color: #f5f5f5;
+  min-height: calc(100vh - 50px);
+  font-family: Arial, sans-serif; /* Fuente original */
 }
 
 /* Dashboard estilo de paneles */
 .dashboard {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 20px;
-    margin-top: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 20px;
+  margin-top: 20px;
+  overflow-x: auto;
 }
 
 .panel {
-    display: flex;
-    align-items: center;
-    width: 260px;
-    height: 80px;
-    padding: 10px;
-    background-color: #343a40;
-    border-radius: 8px;
-    color: #FFF;
-    font-size: 16px;
-    position: relative;
-    transition: transform 0.5s;
+  display: flex;
+  align-items: center;
+  width: 260px;
+  height: 80px;
+  padding: 10px;
+  background-color: #343a40;
+  border-radius: 8px;
+  color: #fff;
+  font-size: 16px;
+  position: relative;
+  transition: transform 0.5s;
 }
 
 .panel:hover {
-    transform: translateY(-25px);
+  transform: translateY(-25px);
 }
 
 .icon-container {
-    width: 60px;
-    height: 60px;
-    background-color: #007bff;
-    border-radius: 5px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 24px;
-    margin-right: 15px;
-    color: white;
+  width: 60px;
+  height: 60px;
+  background-color: #007bff;
+  border-radius: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 24px;
+  margin-right: 15px;
+  color: white;
 }
 
 .text-container {
-    flex-grow: 1;
+  flex-grow: 1;
 }
 
 /* Ajuste del color para cada panel */
-.usuario .icon-container { background-color: #007bff; }
-.cotizaciones .icon-container { background-color: #17a2b8; }
-.inventario .icon-container { background-color: #6f42c1; }
-.reservas .icon-container { background-color: #fd7e14; }
-.ventas .icon-container { background-color: #808080; }
+.usuario .icon-container {
+  background-color: #007bff;
+}
+.cotizaciones .icon-container {
+  background-color: #17a2b8;
+}
+.inventario .icon-container {
+  background-color: #6f42c1;
+}
+.reservas .icon-container {
+  background-color: #fd7e14;
+}
+.ventas .icon-container {
+  background-color: #808080;
+}
 
 /* Estilos para la tabla de datos */
 .data-table {
-    width: 100%;
-    border-collapse: collapse;
-    margin-top: 20px;
+  width: 100%;
+  border-collapse: collapse;
+  margin-top: 20px;
 }
 
-.data-table th, .data-table td {
-    padding: 10px;
-    border: 1px solid #ccc;
-    text-align: left;
+.data-table th,
+.data-table td {
+  padding: 10px;
+  border: 1px solid #ccc;
+  text-align: left;
 }
 
 .data-table th {
-    background-color: #343a40;
-    color: #FFF;
+  background-color: #343a40;
+  color: #fff;
 }
 
 .data-table td {
-    background-color: #f9f9f9;
+  background-color: #f9f9f9;
 }
+
+/* Buscador */
+.search-bar {
+  margin: 20px 0;
+  text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  gap: 1rem;
+}
+#searchInput {
+  padding: 8px;
+  width: 80%;
+  font-size: 16px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.boton__limpiar {
+  min-height: 36px;
+  padding: 0.5rem 1rem;
+  background-color: var(--color-boton);
+  color: var(--color-boton-texto);
+  border-radius: 0.5rem;
+}
+
+.boton__limpiar:hover {
+    background-color: var(--color-boton-hover);
+    color: var(--color-boton-hover-texto);
+  }
+  
+
+
