--- a/includes/carusel.html
+++ b/includes/carusel.html
@@ -9,13 +9,13 @@
 
     <div class="mySlides fade">
         <div class="numbertext">2 / 3</div>
-        <img src="/public/img/mesones.jpeg" class="carousel-image">
+        <img src="/public/img/karibena.jpeg" class="carousel-image">
         <div class="text">Caption Two</div>
     </div>
 
     <div class="mySlides fade">
         <div class="numbertext">3 / 3</div>
-        <img src="/public/img/mesones.jpeg" class="carousel-image">
+        <img src="/public/img/luces.jpeg" class="carousel-image">
         <div class="text">Caption Three</div>
     </div>
 
