--- a/app/views/usuario/pruebas.html
+++ b/app/views/usuario/pruebas.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Formulario de Reserva</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <style>
         /* Estilos principales */
         .sectionReserva {
@@ -89,6 +90,207 @@
             background-color: #45a049;
         }
     </style>
+    <style>
+        :root {
+            --color-uno: #074173;
+            --color-dos: #1679AB;
+            --color-tres: #5DEBD7;
+            --color-cuatro: #C5FF95;
+        }
+
+        /* Estilo de metodo de pago */
+        .iconoPago {
+            height: 50px;
+        }
+
+        .metodoDePago * {
+            margin: 0;
+            font-family: Arial, sans-serif;
+        }
+
+        .descipcion {
+            color: #5b5b5b;
+        }
+
+        .metodoDePago {
+            width: 400px;
+            padding: 15px;
+            background-color: white;
+            border-radius: 0px 25px 0px 25px;
+            border: 5px solid var(--color-uno);
+        }
+
+        .metodoDePago__lista {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            gap: 15px;
+            margin-left: 50px;
+        }
+
+        .metodoDePago__lista__texto {
+            text-decoration: none;
+        }
+
+        /* Estilo del Checkbox */
+        .ui-checkbox {
+            --primary-color: var(--color-tres);
+            --secondary-color: #fff;
+            /* checkbox */
+            --checkbox-diameter: 20px;
+            --checkbox-border-radius: 5px;
+            --checkbox-border-color: var(--color-uno);
+            --checkbox-border-width: 1px;
+            --checkbox-border-style: solid;
+            /* checkmark */
+            --checkmark-size: 1.2;
+        }
+
+        .ui-checkbox,
+        .ui-checkbox *,
+        .ui-checkbox *::before,
+        .ui-checkbox *::after {
+            -webkit-box-sizing: border-box;
+            box-sizing: border-box;
+        }
+
+        .ui-checkbox {
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            appearance: none;
+            width: var(--checkbox-diameter);
+            height: var(--checkbox-diameter);
+            border-radius: var(--checkbox-border-radius);
+            background: var(--secondary-color);
+            border: var(--checkbox-border-width) var(--checkbox-border-style) var(--checkbox-border-color);
+            -webkit-transition: all 0.3s;
+            -o-transition: all 0.3s;
+            transition: all 0.3s;
+            cursor: pointer;
+            position: relative;
+        }
+
+        .ui-checkbox::after {
+            content: "";
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            -webkit-box-shadow: 0 0 0 calc(var(--checkbox-diameter) / 2.5) var(--primary-color);
+            box-shadow: 0 0 0 calc(var(--checkbox-diameter) / 2.5) var(--primary-color);
+            border-radius: inherit;
+            opacity: 0;
+            -webkit-transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+            -o-transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+            transition: all 0.5s cubic-bezier(0.12, 0.4, 0.29, 1.46);
+        }
+
+        .ui-checkbox::before {
+            top: 40%;
+            left: 50%;
+            content: "";
+            position: absolute;
+            width: 4px;
+            height: 7px;
+            border-right: 2px solid var(--secondary-color);
+            border-bottom: 2px solid var(--secondary-color);
+            -webkit-transform: translate(-50%, -50%) rotate(45deg) scale(0);
+            -ms-transform: translate(-50%, -50%) rotate(45deg) scale(0);
+            transform: translate(-50%, -50%) rotate(45deg) scale(0);
+            opacity: 0;
+            -webkit-transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6), opacity 0.1s;
+            -o-transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6), opacity 0.1s;
+            transition: all 0.1s cubic-bezier(0.71, -0.46, 0.88, 0.6), opacity 0.1s;
+        }
+
+        /* actions */
+
+        .ui-checkbox:hover {
+            border-color: var(--primary-color);
+        }
+
+        .ui-checkbox:checked {
+            background: var(--primary-color);
+            border-color: transparent;
+        }
+
+        .ui-checkbox:checked::before {
+            opacity: 1;
+            -webkit-transform: translate(-50%, -50%) rotate(45deg) scale(var(--checkmark-size));
+            -ms-transform: translate(-50%, -50%) rotate(45deg) scale(var(--checkmark-size));
+            transform: translate(-50%, -50%) rotate(45deg) scale(var(--checkmark-size));
+            -webkit-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+            -o-transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+            transition: all 0.2s cubic-bezier(0.12, 0.4, 0.29, 1.46) 0.1s;
+        }
+
+        .ui-checkbox:active:not(:checked)::after {
+            -webkit-transition: none;
+            -o-transition: none;
+            -webkit-box-shadow: none;
+            box-shadow: none;
+            transition: none;
+            opacity: 1;
+        }
+
+        .subirComprobante {
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            gap: 8px;
+        }
+
+        .inputGroup {
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        #nombreArchivo {
+            flex: 1;
+            padding: 8px;
+            border: 1px solid var(--color-uno);
+            border-radius: 4px;
+            background-color: white;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+
+        #subirBtn {
+            padding: 8px 16px;
+            border: none;
+            background-color: var(--color-uno);
+            color: var(--color-tres);
+            border-radius: 4px;
+            cursor: pointer;
+            display: flex;
+            align-items: center;
+            gap: 4px;
+        }
+
+        #subirBtn:hover {
+            background-color: var(--color-tres);
+            color: var(--color-dos);
+        }
+
+        .enviarBtn {
+            width: 100%;
+            padding: 5px 0 5px 0;
+            border: 5px solid var(--color-dos);
+            border-radius: 8px;
+            background-color: var(--color-dos);
+            color: white;
+            font-size: 20px;
+        }
+
+        .enviarBtn:hover {
+            border: 5px solid var(--color-uno);
+            background-color: var(--color-uno);
+            color: white;
+        }
+    </style>
 </head>
 
 <body>
@@ -137,6 +339,58 @@
     </section>
     <p id="contador-dias"></p>
 
+    <section class="metodoDePago">
+        <form action="insert_data.php" method="POST" enctype="multipart/form-data">
+            <h1 class="titulo">Método de Pago</h1>
+            <p class="descipcion">Selecciona su metodo de pago y sube tu comprobante.</p>
+            <br>
+            <div class="metodoDePago__lista">
+                <input type="radio" name="metodoPago" class="ui-checkbox">
+                <img class="iconoPago" src="/public/img/iconos/yape.png" alt="icono de yape">
+                <h3 class="metodoDePago__lista__texto">numero telefonico</h3>
+            </div>
+            <div class="metodoDePago__lista">
+                <input type="radio" name="metodoPago" class="ui-checkbox">
+                <img class="iconoPago" src="/public/img/iconos/yape.png" alt="icono de yape">
+                <h3 class="metodoDePago__lista__texto">numero telefonico</h3>
+            </div>
+            <div class="metodoDePago__lista">
+                <input type="radio" name="metodoPago" class="ui-checkbox">
+                <img class="iconoPago" src="/public/img/iconos/yape.png" alt="icono de yape">
+                <h3 class="metodoDePago__lista__texto">numero telefonico</h3>
+            </div>
+            <br>
+            <div class="subirComprobante">
+                <label for="comprobante">Subir Comprobante de Pago</label>
+                <div class="inputGroup">
+                    <input type="file" id="comprobante" name="comprobante" accept=".jpg, .jpeg, .png" required
+                        style="display: none;">
+                    <span id="nombreArchivo">Seleccionar archivo</span>
+                    <button type="button" id="subirBtn">
+                        <i class="bi bi-upload"></i>
+                        Subir
+                    </button>
+                </div>
+            </div>
+            <br>
+            <input type="submit" class="enviarBtn" value="Enviar">
+
+        </form>
+    </section>
+
+
+    <!-- Validar subida -->
+    <script>
+        document.getElementById('subirBtn').addEventListener('click', function () {
+            document.getElementById('comprobante').click();
+        });
+
+        document.getElementById('comprobante').addEventListener('change', function () {
+            const archivo = this.files[0];
+            const nombreArchivo = document.getElementById('nombreArchivo');
+            nombreArchivo.textContent = archivo ? archivo.name : 'Seleccionar archivo';
+        });
+    </script>
 
     <!-- Validaciones -->
     <script>
