--- a/public/css/admin/estilos.css
+++ b/public/css/admin/estilos.css
@@ -44,7 +44,7 @@ body {
 .gestion-tabla {
   border-collapse: separate;
   border-spacing: 0;
-  width: 100%;
+  width: 100%-50px;
   border: 1px solid #e0e0e0;
   border-radius: 10px;
   overflow: hidden;
@@ -122,17 +122,15 @@ body {
 
 .contenedorTablaResumen {
   max-height: 500px;
-  overflow-y: auto;
-  overflow-x: hidden;
 }
 
 .text-center {
   text-align: center;
   font-family: Arial, sans-serif;
   font-size: 1.5rem;
-  color: #333;
+  color: #f3f3e0;
   margin: 20px 0;
   padding: 10px;
-  background-color: #f0f0f0;
-  border-bottom: 2px solid #ffd700;
+  background-color: #133e87;
+  border-bottom: 10px solid #608BC1;
 }
